--- a/src/VisualStudio/CSharp/Impl/Options/AdvancedOptionPageControl.xaml
+++ b/src/VisualStudio/CSharp/Impl/Options/AdvancedOptionPageControl.xaml
@@ -134,6 +134,7 @@
                     </ComboBox>
                     <TextBlock x:Name="Custom_VS_Theme_Warning"
                            TextWrapping="WrapWithOverflow"
+                           Margin="0, 0, 0, 8"
                            Text="{x:Static local:AdvancedOptionPageStrings.Editor_color_scheme_options_are_only_available_when_using_a_color_theme_bundled_with_Visual_Studio_The_color_theme_can_be_configured_from_the_Environment_General_options_page}"/>
                 </StackPanel>
             </GroupBox>
