--- a/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
+++ b/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
@@ -6,8 +6,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vs="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0" xmlns:changesignature="clr-namespace:Microsoft.VisualStudio.LanguageServices.Implementation.ChangeSignature"
-    Height="275" Width="500"
-    MinHeight="275" MinWidth="500"
+    Height="256" Width="500"
+    MinHeight="256" MinWidth="500"
     Title="{Binding ElementName=dialog, Path=AddParameterDialogTitle}"
     HasHelpButton="False"
     ResizeMode="CanResizeWithGrip"
@@ -27,21 +27,21 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Type Name:" />
-            <Border Grid.Row="1" Grid.Column="1" BorderThickness="1" BorderBrush="LightGray" Margin="5,5,5,5">
+            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Padding="0,5,0,5" Content="Type name:" />
+            <Border Grid.Row="1" Grid.Column="1" BorderThickness="1" BorderBrush="LightGray" Margin="0,5,0,5">
                 <ContentControl x:Name="TypeContentControl" Focusable="False" Margin="0,0,0,0" PreviewKeyDown="TypeNameContentControl_PreviewKeyDown"/>
             </Border>
-            <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Content="Parameter Name:" />
-            <Border Grid.Row="3" Grid.Column="1" BorderThickness="1" BorderBrush="LightGray" Margin="5,5,5,5">
-                <ContentControl x:Name="NameContentControl" Focusable="False" Margin="0,0,0,0" PreviewKeyDown="TypeNameContentControl_PreviewKeyDown"/>
+            <Label Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Padding="0,5,0,5" Content="Parameter name:" />
+            <Border Grid.Row="3" Grid.Column="1" BorderThickness="1" BorderBrush="LightGray" Margin="0,5,0,5">
+                <ContentControl x:Name="NameContentControl" Height="16" Focusable="False" Margin="0,0,0,0" PreviewKeyDown="TypeNameContentControl_PreviewKeyDown"/>
             </Border>
-            <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Content="Value to insert at callsites (empty to introduce errors):" />
-            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding CallsiteValue, Mode=TwoWay}" Margin="5,5,5,5" />
+            <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"  Padding="0,5,0,5" Content="Value to insert at callsites:" />
+            <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding CallsiteValue, Mode=TwoWay}"  Margin="0,5,0,5" />
         </Grid>
         <StackPanel Grid.Row="1"
                     HorizontalAlignment="Right" 
