--- a/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
+++ b/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
@@ -55,7 +55,7 @@
                     IsDefault="True"
                     MinWidth="73"
                     MinHeight="21"/>
-            <vs:DialogButton x:Uid="CancelButton" 
+            <vs:DialogButton x:Uid="CancelButton" x:Name="CancelButton"
                     Content="{Binding ElementName=dialog, Path=Cancel}" 
                     Margin="7, 0, 0, 0" 
                     Padding="{StaticResource ResourceKey=okCancelButtonPadding}"
