more code review feedback

--- a/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
+++ b/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
@@ -1,5 +1,5 @@
 ﻿<vs:DialogWindow 
-    x:Uid="ParameterDetailsDialog"
+    x:Uid="AddParameterDialog"
     x:Name="dialog"
     x:Class="Microsoft.VisualStudio.LanguageServices.Implementation.ChangeSignature.AddParameterDialog"
     x:ClassModifier="internal"         
