--- a/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
+++ b/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
@@ -6,8 +6,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vs="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
-    Height="256" Width="500"
-    MinHeight="256" MinWidth="500"
+    Height="405" Width="600"
+    MinHeight="405" MinWidth="600"
     Title="{Binding ElementName=dialog, Path=AddParameterDialogTitle}"
     HasHelpButton="False"
     ResizeMode="CanResizeWithGrip"
@@ -31,6 +31,10 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Label x:Name="TypeNameLabelName" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Padding="0,5,0,5" Content="{Binding ElementName=dialog, Path=TypeNameLabel}" />
             <Border Grid.Row="1" Grid.Column="1" BorderThickness="1" BorderBrush="LightGray" Margin="0,5,0,5">
@@ -40,8 +44,32 @@
             <Border Grid.Row="3" Grid.Column="1" BorderThickness="1" BorderBrush="LightGray" Margin="0,5,0,5">
                 <ContentControl x:Name="NameContentControl" Height="16" Focusable="False" Margin="0,0,0,0" PreviewKeyDown="TypeOrNameContentControl_PreviewKeyDown" KeyUp="TypeOrNameContentControl_KeyUp" AutomationProperties.LabeledBy="{Binding ElementName=ParameterNameLabelName}"/>
             </Border>
-            <Label x:Name="CallSiteValueLabelName" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"  Padding="0,5,0,5" Content="{Binding ElementName=dialog, Path=CallSiteValueLabel}" />
-            <TextBox x:Name="CallSiteValueTextBox" Grid.Row="5" Grid.Column="1" Text="{Binding CallSiteValue, Mode=TwoWay}"  Margin="0,5,0,5" AutomationProperties.LabeledBy="{Binding ElementName=CallSiteValueLabelName}" />
+            <Label x:Name="ParameterKindLabelName" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Content="Parameter kind:" />
+            <RadioButton x:Name="RequiredParameterRadioButton" Grid.Row="5" Margin="5" GroupName="ParameterKind" IsChecked="True">Required</RadioButton>
+            <Grid Grid.Row="6" Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <RadioButton x:Name="OptionalParameterRadioButton" Grid.Column="0" GroupName="ParameterKind" VerticalContentAlignment="Center">Optional with default value:</RadioButton>
+                <TextBox x:Name="DefaultValue" Grid.Column="1" Margin="5,0,0,0" IsEnabled="{Binding IsChecked, ElementName=OptionalParameterRadioButton}"></TextBox>
+            </Grid>
+            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Content="Value to inject at callsites:" />
+            <Grid Grid.Row="8" Margin="5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <RadioButton x:Name="CallsiteValueRadioButton" Grid.Row="0" Grid.Column="0" GroupName="CallsiteKind" VerticalContentAlignment="Center" IsChecked="True">Value:</RadioButton>
+                <TextBox Grid.Column="1" Grid.Row="0" Margin="5,0,0,0" IsEnabled="{Binding IsChecked, ElementName=CallsiteValueRadioButton}" Text="{Binding CallsiteValue, Mode=TwoWay}"></TextBox>
+                <CheckBox Grid.Row="1" Grid.ColumnSpan="2" Margin="25,5,0,0" >Use named argument</CheckBox>
+            </Grid>
+            <RadioButton x:Name="IntroduceErrorRadioButton" Grid.Row="9" Margin="5,5,0,0" Grid.Column="0" GroupName="CallsiteKind" VerticalContentAlignment="Center">Introduce undefined TODO variables</RadioButton>
+            <RadioButton x:Name="OmitArgumentRadioButton" Grid.Row="10" Margin="5,10,0,0" GroupName="CallsiteKind" IsEnabled="{Binding IsChecked, ElementName=OptionalParameterRadioButton}" Content="Omit (only for optional parameters)" />
         </Grid>
         <StackPanel Grid.Row="1"
                     HorizontalAlignment="Right" 
