--- a/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
+++ b/src/VisualStudio/Core/Def/Implementation/ChangeSignature/AddParameterDialog.xaml
@@ -44,17 +44,17 @@
             <Border Grid.Row="3" Grid.Column="1" BorderThickness="1" BorderBrush="LightGray" Margin="0,5,0,5">
                 <ContentControl x:Name="NameContentControl" Height="16" Focusable="False" Margin="0,0,0,0" PreviewKeyDown="TypeOrNameContentControl_PreviewKeyDown" KeyUp="TypeOrNameContentControl_KeyUp" AutomationProperties.LabeledBy="{Binding ElementName=ParameterNameLabelName}"/>
             </Border>
-            <Label x:Name="ParameterKindLabelName" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Content="Parameter kind:" />
-            <RadioButton x:Name="RequiredParameterRadioButton" Grid.Row="5" Margin="5" GroupName="ParameterKind" IsChecked="True">Required</RadioButton>
+            <Label x:Name="ParameterKindLabelName" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Content="{Binding ElementName=dialog, Path=ParameterKind}" />
+            <RadioButton x:Name="RequiredParameterRadioButton" Grid.Row="5" Margin="5" GroupName="ParameterKind" IsChecked="True" Content="{Binding ElementName=dialog, Path=Required}" />
             <Grid Grid.Row="6" Margin="5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <RadioButton x:Name="OptionalParameterRadioButton" Grid.Column="0" GroupName="ParameterKind" VerticalContentAlignment="Center">Optional with default value:</RadioButton>
+                <RadioButton x:Name="OptionalParameterRadioButton" Grid.Column="0" GroupName="ParameterKind" VerticalContentAlignment="Center" Content="{Binding ElementName=dialog, Path=OptionalWithDefaultValue}" />
                 <TextBox x:Name="DefaultValue" Grid.Column="1" Margin="5,0,0,0" IsEnabled="{Binding IsChecked, ElementName=OptionalParameterRadioButton}"></TextBox>
             </Grid>
-            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Content="Value to inject at callsites:" />
+            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Content="{Binding ElementName=dialog, Path=ValueToInjectAtCallsites}" />
             <Grid Grid.Row="8" Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -64,12 +64,12 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <RadioButton x:Name="CallsiteValueRadioButton" Grid.Row="0" Grid.Column="0" GroupName="CallsiteKind" VerticalContentAlignment="Center" IsChecked="True">Value:</RadioButton>
+                <RadioButton x:Name="CallsiteValueRadioButton" Grid.Row="0" Grid.Column="0" GroupName="CallsiteKind" VerticalContentAlignment="Center" IsChecked="True" Content="{Binding ElementName=dialog, Path=Value}" />
                 <TextBox Grid.Column="1" Grid.Row="0" Margin="5,0,0,0" IsEnabled="{Binding IsChecked, ElementName=CallsiteValueRadioButton}" Text="{Binding CallsiteValue, Mode=TwoWay}"></TextBox>
-                <CheckBox Grid.Row="1" Grid.ColumnSpan="2" Margin="25,5,0,0" >Use named argument</CheckBox>
+                <CheckBox Grid.Row="1" Grid.ColumnSpan="2" Margin="25,5,0,0" Content="{Binding ElementName=dialog, Path=UseNamedArgument}" />
             </Grid>
-            <RadioButton x:Name="IntroduceErrorRadioButton" Grid.Row="9" Margin="5,5,0,0" Grid.Column="0" GroupName="CallsiteKind" VerticalContentAlignment="Center">Introduce undefined TODO variables</RadioButton>
-            <RadioButton x:Name="OmitArgumentRadioButton" Grid.Row="10" Margin="5,10,0,0" GroupName="CallsiteKind" IsEnabled="{Binding IsChecked, ElementName=OptionalParameterRadioButton}" Content="Omit (only for optional parameters)" />
+            <RadioButton x:Name="IntroduceErrorRadioButton" Grid.Row="9" Margin="5,5,0,0" Grid.Column="0" GroupName="CallsiteKind" VerticalContentAlignment="Center" Content="{Binding ElementName=dialog, Path=IntroduceUndefinedTodoVariables}"/>
+            <RadioButton x:Name="OmitArgumentRadioButton" Grid.Row="10" Margin="5,10,0,0" GroupName="CallsiteKind" IsEnabled="{Binding IsChecked, ElementName=OptionalParameterRadioButton}" Content="{Binding ElementName=dialog, Path=OmitOnlyForOptionalParameters}" />
         </Grid>
         <StackPanel Grid.Row="1"
                     HorizontalAlignment="Right" 
